harness/fixtures/enforce-arrow-function/bad/async-generic.ts
async function corge<T>(x: T): Promise<T> {
  return x;
}
